logs/batch_1.log
BATCH 1 START: CORE SUBSTRATE
Fri Jun 19 21:17:04 UTC 2026
Planned file operations:
  - Modify encr.h: rename timestamp to causal_seq
  - Modify encoder.h: remove enser_timestamp_ms declaration
  - Modify encoder.c: use causal_sequencer to get next causal seq, remove enser_timestamp_ms
  - Update decoder.h comments
  - Update decoder.c comments
  - Create src/causal_sequencer/causal_sequencer.c
  - Create include/enser/causal_sequencer.h
  - Create src/persistence_log/persistence_log.c
  - Create include/enser/persistence_log.h
  - Remove src/core/storage.c
  - Remove include/enser/storage.h
  - Adjust Makefile to build new modules and remove storage module

gcc -D_POSIX_C_SOURCE=200809L -Wall -Wextra -std=c11 -Iinclude -c src/core/decoder.c -o src/core/decoder.o
gcc -D_POSIX_C_SOURCE=200809L -Wall -Wextra -std=c11 -Iinclude -c src/core/encoder.c -o src/core/encoder.o
src/core/encoder.c:170:5: error: conflicting types for 'encr_hash'; have 'int(const uint8_t *, int,  uint8_t *)' {aka 'int(const unsigned char *, int,  unsigned char *)'}
  170 | int encr_hash(
      |     ^~~~~~~~~
In file included from src/core/encoder.c:5:
include/enser/encoder.h:28:5: note: previous declaration of 'encr_hash' with type 'int(const uint8_t *, size_t,  uint8_t *)' {aka 'int(const unsigned char *, long unsigned int,  unsigned char *)'}
   28 | int encr_hash(
      |     ^~~~~~~~~
make: *** [Makefile:46: src/core/encoder.o] Error 1
